[gd_scene load_steps=7 format=3 uid="uid://cx7ces0fqjkd4"]

[ext_resource type="Script" path="res://Scenes/UI/main_menu.gd" id="1_2s354"]
[ext_resource type="Texture2D" uid="uid://0gqkdsf26hyv" path="res://Interface/background.jpg" id="1_6kxeu"]
[ext_resource type="Texture2D" uid="uid://dcsl0cpot4o50" path="res://Interface/button1.png" id="2_wgywq"]
[ext_resource type="Texture2D" uid="uid://bgf6x6tgxrmnx" path="res://Interface/button3.png" id="3_7a0v7"]
[ext_resource type="Texture2D" uid="uid://b0w182cxf65bb" path="res://Interface/button2.png" id="3_x0y11"]
[ext_resource type="Texture2D" uid="uid://12wx17xr2sgc" path="res://Interface/button6.png" id="4_1s8fh"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2s354")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_6kxeu")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -18.0
offset_right = -18.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/separation = 20
alignment = 1

[node name="NewGame" type="TextureButton" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(190, 75)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("2_wgywq")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/NewGame"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.439216)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 25
text = "New game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Continue" type="TextureButton" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(190, 75)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
disabled = true
texture_normal = ExtResource("3_7a0v7")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Continue"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.439216)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 3
theme_override_constants/shadow_outline_size = 0
theme_override_font_sizes/font_size = 25
text = "Continue"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Settings" type="TextureButton" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(190, 75)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("4_1s8fh")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Settings"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.439216)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 3
theme_override_constants/shadow_outline_size = 0
theme_override_font_sizes/font_size = 25
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Quit" type="TextureButton" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(190, 75)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("3_x0y11")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Quit"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.439216)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 3
theme_override_constants/shadow_outline_size = 0
theme_override_font_sizes/font_size = 25
text = "Quit"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="MarginContainer/VBoxContainer/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
